<resources>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="list">List</string>
    <string name="table">Table</string>
    <string name="graph">Graph</string>
    <string name="statistics">Statistics</string>
    <string name="readings">Readings</string>
    <string name="days">Days</string>
    <string name="all">All</string>
    <string name="average">Average</string>
    <string name="before_meal">Before\nMeal</string>
    <string name="after_meal">After\nMeal</string>
    <string name="date">Date</string>
    <string name="midnight">Midnight</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="bedtime">Bedtime</string>
    <string name="bg">BG</string>
    <string name="carbs">Carbs</string>
    <string name="normal">Normal</string>
    <string name="hyper">Hyper</string>
    <string name="hypo">Hypo</string>
    <string name="loading">Loading&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="searching">Searching&#8230;</string>
    <string name="search_again">Search again</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="device">Device</string>
    <string name="alarm">Alarm</string>
    <string name="knowledge">Knowledge</string>
    <string name="mall">Mall</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="toast_network_connection_failed">Network connection failed</string>
    <string name="toast_network_device_not_open">Network device not open</string>
    <string name="toast_bluetooth_device_not_support">Bluetooth device not support</string>
    <string name="unit_percentage">%</string>
    <string name="fragment_home_last_bg_level">Last BG Level</string>
    <string name="fragment_home_average_bg">Average BG</string>
    <string name="fragment_home_week">Week</string>
    <string name="fragment_home_month">Month</string>
    <string name="fragment_home_add_data">+ Add Data</string>
    <string name="fragment_home_remaining_battery">Remaining\nBattery</string>
    <string name="fragment_home_last_sync">Last Sync</string>
    <string name="fragment_calibration_insert_strip">Please calibrate with BG strip</string>
    <string name="fragment_manual_calibration">Manual Calibration</string>
    <string name="switchto_blood_calibration">Switch to Blood Test</string>
    <string name="switchto_control_calibration">Switch to Control Liquid Test</string>
    <string name="fragment_calibrate">Calibrate</string>
    <string name="calibrate_confirm">Is it sure to record this calibration?</string>
    <string name="record_calibrate_confirm">Is it sure to calibrate?</string>
    <string name="calibration_done">Calibration done</string>
    <string name="record_done">Record done</string>
    <string name="fragment_settings_pairing">Transmiter Pairing</string>
    <string name="fragment_settings_unpairing">Transmiter UnPairing</string>
    <string name="fragment_settings_unpair">Transmitter will deactivate, continue?</string>
    <string name="recovery_pair">If reset,transmitter will deactivate and the log will be cleared, continue?</string>
    <string name="recovery_clear">If reset,the log will be cleared, continue?</string>
    <string name="fragment_settings_hi_bg_threshold">Hi BG Threshold</string>
    <string name="fragment_settings_lo_bg_threshold">Lo BG Threshold</string>
    <string name="fragment_settings_language">English</string>
    <string name="fragment_settings_hyper_error">Hi BG threshold is ranging from 8mmol/L to 25mmol/L</string>
    <string name="fragment_settings_hypo_error">Lo BG threshold is ranging from 2.2mmol/L to 5mmol/L</string>
    <string name="fragment_settings_startup">Sensor initializing&#8230;</string>
    <string name="activity_main_tab_home">Home</string>
    <string name="activity_main_tab_calibration">Calibration</string>
    <string name="activity_main_tab_settings">Settings</string>
    <string name="alarm_hyper">High BG!</string>
    <string name="alarm_hypo">Low BG!</string>
    <string name="calibrate_blood">Calibration!</string>
    <string name="blood_glucose">Blood Glucose!</string>
    <string name="alarm_new_sensor">Check the new sensor for confirmation!</string>
    <string name="alarm_expiration">Sensor is expired</string>
    <string name="alarm_expiration2">Sensor is expired</string>
    <string name="alarm_sensor_error">Sensor error</string>
    <string name="alarm_pda_error">PDA error!</string>
    <string name="alarm_pda_comm_error">communication loss！</string>
    <string name="alarm_pda_battery">PDA battery low!</string>
    <string name="app_name">PDA</string>
    <string name="chart">CHART</string>
    <string name="clear">Clear</string>
    <string name="minutes">minutes</string>
    <string name="shut_up">Alarm Off</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="record">Record</string>
    <string name="remind_title">Reminder</string>
    <string name="remind_again">Snooze</string>
    <string name="remind_off">Off</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="suspend_title">Suspend/Stop</string>
    <string name="suspend_option">Suspend (Pump not rewind)</string>
    <string name="stop_option">Stop (Pump rewind)</string>
    <string name="suspend_content">Suspend pump delivery?</string>
    <string name="stop_content">Stop pump delivery?</string>
    <string name="value_out_of_range">Value out of range</string>
    <string name="resume_title">RESUME</string>
    <string name="resume_prompt">The pump will resume after %s minutes of no delivery</string>
    <string name="bolus_cancel_prompt">Bolus will be canceled,Please Confirm!</string>
    <string name="bolus_cancel_title">Cancel Bolus</string>
    <string name="temp_basal_title">Temporary Basal</string>
    <string name="temp_basal_cancel_prompt">Resuming Basal Program 1</string>
    <string name="temp_basal_max_prompt">You have entered a value larger than the Max value</string>
    <string name="change_name_title">Change Name</string>
    <string name="rate">Rate</string>
    <string name="time">Time</string>
    <string name="begin">Begin</string>
    <string name="last_set">Last Temp Basal</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="basal_rate">Basal Rate</string>
    <string name="activate_basal">Activate Basal</string>
    <string name="activate_basal_confirm">Activating Basal Program %s</string>
    <string name="activate_basal_prompt">All delivery is currently suspended, resume and activate %s?</string>
    <string name="basal_rate_title">Basal Rate</string>
    <string name="basal_delete_prompt">Delete Basal time period?</string>
    <string name="resume_bolus">Please cancel the bolus,then suspend</string>
    <string name="basal_save_setting_prompt">Please save settings, or press the back button!</string>
    <string name="input_empty">Input is empty!</string>
    <string name="basal_input_err">Input error! Please check start time and end time.</string>
    <string name="connect_fail">Connect fail!</string>
    <string name="connect_timeout">Connect timeout!</string>
    <string name="home_title">Home</string>
    <string name="home_bolus">BOLUS</string>
    <string name="home_basal">BASAL</string>
    <string name="home_actions">ACTIONS</string>
    <string name="home_history">HISTORY</string>
    <string name="home_setting">SETTINGS</string>
    <string name="home_suspend">SUSPEND/STOP</string>
    <string name="home_resume">RESUME</string>
    <string name="home_last_bg">Last BG</string>
    <string name="home_last_bolus">Last Bolus</string>
    <string name="home_current_basal">Current Basal</string>
    <string name="home_bolus_title">Bolus Delivering</string>
    <string name="home_temp_basal_title">Temp Basal Enabled</string>
    <string name="home_suspend_title">Suspend</string>
    <string name="home_minute_left"> minutes left</string>
    <string name="home_u_left"> U left</string>
    <string name="home_delivery_stop">Delivery Stop</string>
    <string name="home_delivery_stop_unpaired">Please change pump</string>
    <string name="home_delivery_stop_paired">Please change reservoir or pump</string>
    <string name="lock_screen_prompt">Long press \"down\" and \"bolus\" button to unlock screen</string>
    <string name="status_info_alarm">Alert</string>
    <string name="status_info_insulin_remaining">Insulin Remaining</string>
    <string name="status_info_pump_battery">Pump Battery</string>
    <string name="status_info_link_status">Link Status</string>
    <string name="status_info_alarm_active">BG Reminders</string>
    <string name="status_info_pda_battery">PDA Battery</string>
    <string name="basal_title">Basal</string>
    <string name="basal_title_edit">Basal Edit</string>
    <string name="basal_name_program1">Program 1</string>
    <string name="basal_name_program2">Program 2</string>
    <string name="basal_name_program3">Program 3</string>
    <string name="basal_change_settings">Change Settings</string>
    <string name="basal_save_settings">Save Settings</string>
    <string name="basal_change_tab_name">Change Basal Program Name</string>
    <string name="basal_temp_basal">Temporary Basal Rate</string>
    <string name="basal_activate_basal">Activate %s</string>
    <string name="basal_activated_basal">Active</string>
    <string name="basal_unactivated_basal">Not Active</string>
    <string name="basal_chart_long_click_prompt">To edit, hold your finger on the graph</string>
    <string name="actions_title">ACTIONS</string>
    <string name="actions_wizard_exit_confirm">Stop wizard and exit?</string>
    <string name="actions_reservoir">Change Reservoir/Battery</string>
    <string name="actions_reservoir_no_pump">No activated pump. Please change pump first</string>
    <string name="actions_reservoir_remove">Please remove the pump from the base</string>
    <string name="actions_reservoir_rewind_prompt">Pump will rewind, continue?</string>
    <string name="actions_reservoir_rewinding">Rewinding</string>
    <string name="actions_reservoir_rewind_fail">Rewind failed</string>
    <string name="actions_reservoir_connect">Please assemble the pump, the filled reservoir and the charged battery</string>
    <string name="actions_reservoir_prime">Prime Reservoir</string>
    <string name="setting_general_date_time">Date and Time</string>
    <string name="setting_general_set_time">Time</string>
    <string name="setting_general_set_date">Date</string>
    <string name="setting_general_language">Language</string>
    <string name="setting_general_mode">Mode</string>
    <string name="setting_general_mode_time">Real_time</string>
    <string name="setting_general_mode_history">Review History</string>
    <string name="setting_general_version">Software Version</string>
    <string name="unit_hour">hour</string>
    <string name="unit_mmol_l">mmol/L</string>
    <string name="six_hour">6 Hour</string>
    <string name="half_hour">12 Hour</string>
    <string name="all_hour">24 Hour</string>
    <string name="history_log_title">History Log</string>
    <string name="data_test">Data Test</string>
    <string name="recovery">Factory Reset</string>
    <string name="synchronizedata">Synchronize Data</string>
    <string name="messagetips">Alert</string>
    <string name="timeout_lock">ScreenOn time</string>
    <string name="glucose_recommend">Glucose Recommend Cal</string>
    <string name="utilities">Utilities</string>
    <string name="minutebefore">Minutes Ago</string>
</resources>